--- a/index-ar.html
+++ b/index-ar.html
@@ -25,7 +25,7 @@
         <div class="first-header">
             <div class="container">
                 <div class="header-info">
-                    <span class="first-span">الموقع الرسمي</span>
+                    <a href="#"><span class="first-span">الموقع الرسمي</span></a>
                     <div class="lang-section">
                         <img src="images/lang.png" alt="lang-img">
                         <div class="dropdown">
@@ -44,7 +44,7 @@
                 <div class="nav-header">
                     <div class="navgition">
                         <div class="nav-head">
-                            <h3 class="fixall nav-title">القايمة الرئيسية</h3>
+                            <h3 class="fixall nav-title">القائمة الرئيسية</h3>
                             <a class="fixall close-btn">
                                 <i class="fas fa-times"></i>
                             </a>
@@ -99,7 +99,7 @@
                             </div>
                             <div class="search-box">
                               <div class="search-bar">
-                                <input type="text" class="search-input" placeholder="Search">
+                                <input type="text" class="search-input" placeholder="ابحث">
                                 <button class="click-search"><i class="fas fa-search"></i></button>
                               </div>
                             </div>
@@ -119,7 +119,7 @@
                             </div>
                             <div class="search-box">
                               <div class="search-bar">
-                                <input type="text" class="search-input" placeholder="Search">
+                                <input type="text" class="search-input" placeholder="ابحث">
                                 <button class="click-search"><i class="fas fa-search"></i></button>
                               </div>
                             </div>
@@ -608,13 +608,13 @@
                     <a href="#"><img src="images/brand.png" class="brand-img"></a>
                 </div>
                 <div class="item">
-                    <a href="#"><img src="images/brand.png" class="brand-img"></a> 
+                    <a href="#"><img src="images/brand.png" class="brand-img"></a>
                 </div>
                 <div class="item">
-                    <a href="#"><img src="images/brand.png" class="brand-img"></a>       
+                    <a href="#"><img src="images/brand.png" class="brand-img"></a>
                 </div>
                 <div class="item">
-                     <a href="#"><img src="images/brand.png" class="brand-img"></a>
+                    <a href="#"><img src="images/brand.png" class="brand-img"></a>
                 </div>
                 <div class="item">
                     <a href="#"><img src="images/brand.png" class="brand-img"></a>
@@ -822,11 +822,6 @@
     </footer>            
 
     <!-- footer section -->
-    <!-- fixed-chat -->
-    <a href="#" class="fixed-chat">
-        <img src="images/chat.png" alt="fixed-chat">
-    </a>
-    <!-- fixed-chat -->
     <!-- overlay -->
     <div class="overlay-box"></div>
     <div class="overlay-box2"></div>
