--- a/index.html
+++ b/index.html
@@ -329,156 +329,64 @@
     <!-- section product slider 2-->
     <div class="product-slider slider-two">
         <div class="container">
-          <h3 class="product-head">Recently Arrived</h3>
-          <div class="owl-carousel owl-theme">
-                <div class="item">
-                    <div class="item-cont">
-                        <div class="item-img-box">
-                            <a href="#!"><img src="images/product1.jpg" class="item-img"></a>
+            <h3 class="product-head">Recently Arrived</h3>
+            <div class="product-div">
+                <div class="row">
+                    <div class="col-lg-3">
+                        <div class="item-cont">
+                            <div class="item-img-box">
+                                <a href="#!"><img src="images/product1.jpg" class="item-img"></a>
+                            </div>
+                            <div class="item-content">
+                                <a class="item-name" href="#!">Easy Clean Sterilizer 50 ml</a>
+                                <div class="price-box">
+                                    <span class="first-price">13.00 SAR</span>
+                                    <span class="last-price">15.00 SAR</span>
+                                </div>
+                            </div>
+                            <div class="item-submit">
+                                <button class="item-button">Add to cart</button>
+                            </div>
                         </div>
-                        <div class="item-content">
+                    </div>
+                    <div class="col-lg-3">
+                        <div class="item-cont">
+                            <div class="item-img-box">
+                                <a href="#!"><img src="images/product2.jpg" class="item-img"></a>
+                                <span class="item-span">Sale 20%</span>
+                            </div>
+                            <div class="item-content">
                             <a class="item-name" href="#!">Easy Clean Sterilizer 50 ml</a>
-                            <div class="price-box">
-                                <span class="first-price">13.00 SAR</span>
-                                <span class="last-price">15.00 SAR</span>
+                                <div class="price-box">
+                                    <span class="first-price">13.00 SAR</span>
+                                </div>
+                            </div>
+                            <div class="item-submit">
+                                <button class="item-button">Add to cart</button>
                             </div>
                         </div>
-                        <div class="item-submit">
-                            <button class="item-button">Add to cart</button>
-                        </div>
                     </div>
-                </div>
-                <div class="item">
-                    <div class="item-cont">
-                        <div class="item-img-box">
-                            <a href="#!"><img src="images/product2.jpg" class="item-img"></a>
-                            <span class="item-span">Sale 20%</span>
-                        </div>
-                        <div class="item-content">
-                        <a class="item-name" href="#!">Easy Clean Sterilizer 50 ml</a>
-                            <div class="price-box">
-                                <span class="first-price">13.00 SAR</span>
+                    <div class="col-lg-3">
+                        <div class="item-cont">
+                            <div class="item-img-box">
+                                <a href="#!"><img src="images/product3.jpg" class="item-img"></a>
+                            </div>
+                            <div class="item-content">
+                                <a class="item-name" href="#!">Easy Clean Sterilizer 50 ml</a>
+                                <div class="price-box">
+                                    <span class="first-price">13.00 SAR</span>
+                                    <span class="last-price">15.00 SAR</span>
+                                </div>
+                            </div>
+                            <div class="item-submit">
+                                <button class="item-button">Add to cart</button>
                             </div>
                         </div>
-                        <div class="item-submit">
-                            <button class="item-button">Add to cart</button>
-                        </div>
                     </div>
-                </div>
-                <div class="item">
-                    <div class="item-cont">
-                        <div class="item-img-box">
-                            <a href="#!"><img src="images/product3.jpg" class="item-img"></a>
-                        </div>
-                        <div class="item-content">
-                            <a class="item-name" href="#!">Easy Clean Sterilizer 50 ml</a>
-                            <div class="price-box">
-                                <span class="first-price">13.00 SAR</span>
-                                <span class="last-price">15.00 SAR</span>
-                            </div>
-                        </div>
-                        <div class="item-submit">
-                            <button class="item-button">Add to cart</button>
-                        </div>
-                    </div>
-                </div>
-                <div class="item">
-                    <div class="item-cont">
-                        <div class="item-img-box">
-                            <a href="#!"><img src="images/product4.jpg" class="item-img"></a>
-                            <span class="item-span">Sale 20%</span>
-                        </div>
-                        <div class="item-content">
-                            <a class="item-name" href="#!">Easy Clean Sterilizer 50 ml</a>
-                            <div class="price-box">
-                                <span class="first-price">13.00 SAR</span>
-                            </div>
-                        </div>
-                        <div class="item-submit">
-                            <button class="item-button">Add to cart</button>
-                        </div>
-                    </div>
-                </div>
-                <div class="item">
-                    <div class="item-cont">
-                        <div class="item-img-box">
-                            <a href="#!"><img src="images/product1.jpg" class="item-img"></a>
-                        </div>
-                        <div class="item-content">
-                            <a class="item-name" href="#!">Easy Clean Sterilizer 50 ml</a>
-                            <div class="price-box">
-                                <span class="first-price">13.00 SAR</span>
-                                <span class="last-price">15.00 SAR</span>
-                            </div>
-                        </div>
-                        <div class="item-submit">
-                            <button class="item-button">Add to cart</button>
-                        </div>
-                    </div>
-                </div>
-          </div>
-        </div>
-    </div>
-    <!-- section product slider 2--> 
-    <!-- section product slider 3-->
-    <div class="product-slider slider-three">
-        <div class="container">
-          <div class="owl-carousel owl-theme">
-                <div class="item">
-                    <div class="item-cont">
-                        <div class="item-img-box">
-                            <a href="#!"><img src="images/product1.jpg" class="item-img"></a>
-                        </div>
-                        <div class="item-content">
-                            <a class="item-name" href="#!">Easy Clean Sterilizer 50 ml</a>
-                            <div class="price-box">
-                                <span class="first-price">13.00 SAR</span>
-                                <span class="last-price">15.00 SAR</span>
-                            </div>
-                        </div>
-                        <div class="item-submit">
-                            <button class="item-button">Add to cart</button>
-                        </div>
-                    </div>
-                </div>
-                <div class="item">
-                    <div class="item-cont">
-                        <div class="item-img-box">
-                            <a href="#!"><img src="images/product2.jpg" class="item-img"></a>
-                            <span class="item-span">Sale 20%</span>
-                        </div>
-                        <div class="item-content">
-                        <a class="item-name" href="#!">Easy Clean Sterilizer 50 ml</a>
-                            <div class="price-box">
-                                <span class="first-price">13.00 SAR</span>
-                            </div>
-                        </div>
-                        <div class="item-submit">
-                            <button class="item-button">Add to cart</button>
-                        </div>
-                    </div>
-                </div>
-                <div class="item">
-                    <div class="item-cont">
-                        <div class="item-img-box">
-                            <a href="#!"><img src="images/product3.jpg" class="item-img"></a>
-                        </div>
-                        <div class="item-content">
-                        <a class="item-name" href="#!">Easy Clean Sterilizer 50 ml</a>
-                            <div class="price-box">
-                                <span class="first-price">13.00 SAR</span>
-                                <span class="last-price">15.00 SAR</span>
-                            </div>
-                        </div>
-                        <div class="item-submit">
-                            <button class="item-button">Add to cart</button>
-                        </div>
-                    </div>
-                </div>
-                <div class="item">
-                    <div class="item-cont">
-                        <div class="item-img-box">
-                            <a href="#!"><img src="images/product4.jpg" class="item-img"></a>
+                    <div class="col-lg-3">
+                        <div class="item-cont">
+                            <div class="item-img-box">
+                                <a href="#!"><img src="images/product4.jpg" class="item-img"></a>
                                 <span class="item-span">Sale 20%</span>
                             </div>
                             <div class="item-content">
@@ -490,22 +398,74 @@
                             <div class="item-submit">
                                 <button class="item-button">Add to cart</button>
                             </div>
-                    </div>
-                </div>
-                <div class="item">
-                    <div class="item-cont">
-                        <div class="item-img-box">
-                            <a href="#!"><img src="images/product1.jpg" class="item-img"></a>
                         </div>
-                        <div class="item-content">
-                            <a class="item-name" href="#!">Easy Clean Sterilizer 50 ml</a>
-                            <div class="price-box">
-                                <span class="first-price">13.00 SAR</span>
-                                <span class="last-price">15.00 SAR</span>
+                    </div>
+                    <div class="col-lg-3">
+                        <div class="item-cont">
+                            <div class="item-img-box">
+                                <a href="#!"><img src="images/product1.jpg" class="item-img"></a>
+                            </div>
+                            <div class="item-content">
+                                <a class="item-name" href="#!">Easy Clean Sterilizer 50 ml</a>
+                                <div class="price-box">
+                                    <span class="first-price">13.00 SAR</span>
+                                    <span class="last-price">15.00 SAR</span>
+                                </div>
+                            </div>
+                            <div class="item-submit">
+                                <button class="item-button">Add to cart</button>
                             </div>
                         </div>
-                        <div class="item-submit">
-                            <button class="item-button">Add to cart</button>
+                    </div>
+                    <div class="col-lg-3">
+                        <div class="item-cont">
+                            <div class="item-img-box">
+                                <a href="#!"><img src="images/product2.jpg" class="item-img"></a>
+                                <span class="item-span">Sale 20%</span>
+                            </div>
+                            <div class="item-content">
+                            <a class="item-name" href="#!">Easy Clean Sterilizer 50 ml</a>
+                                <div class="price-box">
+                                    <span class="first-price">13.00 SAR</span>
+                                </div>
+                            </div>
+                            <div class="item-submit">
+                                <button class="item-button">Add to cart</button>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-3">
+                        <div class="item-cont">
+                            <div class="item-img-box">
+                                <a href="#!"><img src="images/product3.jpg" class="item-img"></a>
+                            </div>
+                            <div class="item-content">
+                            <a class="item-name" href="#!">Easy Clean Sterilizer 50 ml</a>
+                                <div class="price-box">
+                                    <span class="first-price">13.00 SAR</span>
+                                    <span class="last-price">15.00 SAR</span>
+                                </div>
+                            </div>
+                            <div class="item-submit">
+                                <button class="item-button">Add to cart</button>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-3">
+                        <div class="item-cont">
+                            <div class="item-img-box">
+                                <a href="#!"><img src="images/product4.jpg" class="item-img"></a>
+                                <span class="item-span">Sale 20%</span>
+                            </div>
+                            <div class="item-content">
+                                <a class="item-name" href="#!">Easy Clean Sterilizer 50 ml</a>
+                                <div class="price-box">
+                                    <span class="first-price">13.00 SAR</span>
+                                </div>
+                            </div>
+                            <div class="item-submit">
+                                <button class="item-button">Add to cart</button>
+                            </div>     
                         </div>
                     </div>
                 </div>
@@ -515,7 +475,7 @@
             </div>
         </div>
     </div>
-    <!-- section product slider 3-->     
+    <!-- section product slider 2-->      
     <!-- big-image section -->
     <section>
         <div class="container">
@@ -526,7 +486,7 @@
     </section>
     <!-- big-image section --> 
     <!-- section product slider 4-->
-    <div class="product-slider slider-two">
+    <div class="product-slider slider-fourth">
         <div class="container">
           <h3 class="product-head">Special Offers</h3>
           <div class="owl-carousel owl-theme">
